Added a message for people looking at the source code

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Dani&euml;l Korssen</title>
   </head>
+  <!-- Hi, I am learning Vue through building this portfolio website. So please be kind. If you see anything that I could've done better, don't hesitate shoot me a message.-->
   <body>
     <noscript>
       <strong>My portfolio doesn't work properly without JavaScript enabled. Please enable it to continue. Thank you.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
