--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Dani&euml;l Korssen</title>
+
+    <title>Daniël Korssen</title>
+
+    <meta name="description" content="Daniël is a creative developer working and experimenting at the intersection of art and technology, currently studying Interaction Design at HKU.">
+    <meta name="keywords" content="Daniel,Korssen,Daan,Webdesigner,Creative,developer,generative,art,programming">
+    <meta name="author" content="Daniel Korssen">
+
   </head>
-  <!-- Hi, I am learning Vue through building this portfolio website. So please be kind. If you see anything that I could've done better, don't hesitate shoot me a message.-->
+  <!-- Hi there! If you see anything that I could've done better, don't hesitate to shoot me a message.-->
   <body>
     <noscript>
       <strong>My portfolio doesn't work properly without JavaScript enabled. Please enable it to continue. Thank you.</strong>
