better meta data

--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-    <title>Daniël Korssen</title>
+    <title>Daniël Korssen - Portfolio</title>
 
-    <meta name="description" content="Daniël is a creative developer working and experimenting at the intersection of art and technology, currently studying Interaction Design at HKU.">
-    <meta name="keywords" content="Daniel,Korssen,Daan,Webdesigner,Creative,developer,generative,art,programming">
-    <meta name="author" content="Daniel Korssen">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-65130726-4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-65130726-4');
+    </script>
+
+    <meta name="description" content="Daniël is a creative developer working and experimenting
+    at the intersection of art and technology, currently studying Interaction Design
+    at HKU University of Arts.">
+    <meta name="keywords" content="Daniël,Korssen,Daan,Webdesigner,Creative,
+    developer,generative,art,programming">
+    <meta name="author" content="Daniël Korssen">
 
   </head>
-  <!-- Hi there! If you see anything that I could've done better, don't hesitate to shoot me a message.-->
+  <!-- Hi there! If you see anything that I could've done better,
+  don't hesitate to shoot me a message.-->
   <body>
     <noscript>
-      <strong>My portfolio doesn't work properly without JavaScript enabled. Please enable it to continue. Thank you.</strong>
+      <strong>
+        My portfolio doesn't work properly without JavaScript enabled.
+        Please enable it to continue. Thank you.
+      </strong>
     </noscript>
     <div id="app"></div>
   </body>
