Implemented vue-meta

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
       gtag('config', 'UA-65130726-4');
     </script>
 
-    <meta name="description" content="Daniël is a creative developer working and experimenting
+    <meta data-vmid="description" data-vue-meta="true" name="description" content="Daniël is a creative developer working and experimenting
     at the intersection of art and technology, currently studying Interaction Design
-    at HKU University of Arts.">
+    at HKU University of Arts. You can find him on GitHub, LinkedIn, Instagram, or send him a message.">
     <meta name="keywords" content="Daniël,Korssen,Daan,Webdesigner,Creative,
     developer,generative,art,programming">
     <meta name="author" content="Daniël Korssen">
