--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-65130726-4"></script>
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,700|Esteban:400""" rel="stylesheet">
+
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
