--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-65130726-4"></script>
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,600|Esteban:400""" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:300,600|Esteban:400""" rel="stylesheet">
 
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -21,16 +21,17 @@
 
     <meta data-vmid="description" data-vue-meta="true" name="description" content="Daniël is a creative developer working and experimenting
     at the intersection of art and technology, currently studying Interaction Design
-    at HKU University of Arts. You can find him on GitHub, LinkedIn, Instagram, or send him a message.">
+    at HKU University of Arts. You can find him on GitHub, LinkedIn, Twitter, or send him a message.">
     <meta name="keywords" content="Daniël,Korssen,Daan,Webdesigner,Creative,
     developer,generative,art,programming">
     <meta name="author" content="Daniël Korssen">
 
   </head>
-  <!-- Hi there! If you see anything that I could've done better,
+  <!-- Hi there! Glad to see you looking at the source code. If you see anything that I could've done better,
   don't hesitate to shoot me a message.-->
   <body>
     <noscript>
+      <h1>Dani&euml;l Korssen</h1>
       <strong>
         My portfolio doesn't work properly without JavaScript enabled.
         Please enable it to continue. Thank you.
