Updated meta tag and noscript text

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
     <meta data-vmid="description" data-vue-meta="true" name="description" content="Daniël is a creative developer working and experimenting
     at the intersection of art and technology, currently studying Interaction Design
     at HKU University of Arts. You can find him on GitHub, LinkedIn, Twitter, or send him a message.">
-    <meta name="keywords" content="Daniël,Korssen,Daan,Webdesigner,Creative,
-    developer,generative,art,programming">
+    <meta name="keywords" content="Daniël,Korssen,Daan,danielkorssen,Webdesigner,Creative,
+    developer,generative,art,programming,technologist">
     <meta name="author" content="Daniël Korssen">
 
   </head>
@@ -33,8 +33,8 @@
     <noscript>
       <h1>Dani&euml;l Korssen</h1>
       <strong>
-        My portfolio doesn't work properly without JavaScript enabled.
-        Please enable it to continue. Thank you.
+        My portfolio doesn't work properly without JavaScript enabled :(
+        Please enable it to continue.
       </strong>
     </noscript>
     <div id="app"></div>
