--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,7 @@
       gtag('config', 'UA-65130726-4');
     </script>
 
-    <meta data-vmid="description" data-vue-meta="true" name="description" content="Daniël is a creative developer working and experimenting
-    at the intersection of art and technology, currently studying Interaction Design
-    at HKU University of Arts. You can find him on GitHub, LinkedIn, Twitter, or send him a message.">
+    <meta data-vmid="description" data-vue-meta="true" name="description" content="Daniël is a freelance creative developer building peculiar interactive digital artefacts, focussing on experimental web technologies.">
     <meta name="keywords" content="Daniël,Korssen,Daan,danielkorssen,Webdesigner,Creative,
     developer,generative,art,programming,technologist">
     <meta name="author" content="Daniël Korssen">
